pushing changes from the server-> added models through strapi admin.

--- a/api/clen/models/clen.settings.json
+++ b/api/clen/models/clen.settings.json
@@ -44,7 +44,8 @@
       "required": false
     },
     "Slug": {
-      "type": "string"
+      "type": "uid",
+      "targetField": "Meno"
     }
   }
 }
