Creates facebook api end point to get:   -latest posts   -videos   -images   -and image of the day
-alse refactors database settings -> hides sensitive data.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "sqlite3": "^5.0.0"
+  },
   "dependencies": {
+    "axios": "^0.20.0",
     "knex": "<0.20.0",
     "pg": "latest",
     "slugify": "^1.4.5",
