Adds member page

--- a/api/clen/models/clen.settings.json
+++ b/api/clen/models/clen.settings.json
@@ -46,6 +46,9 @@
     "Slug": {
       "type": "uid",
       "targetField": "Meno"
+    },
+    "birth_date": {
+      "type": "date"
     }
   }
 }
