Creates database to store facebook page data.   Stores:     -news     -image of the week     -media   ... in separate tables.

--- a/api/trener/models/trener.settings.json
+++ b/api/trener/models/trener.settings.json
@@ -8,10 +8,5 @@
     "increments": true,
     "timestamps": true
   },
-  "attributes": {
-    "meno": {
-      "type": "string",
-      "required": true
-    }
-  }
+  "attributes": {}
 }
