--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.20.0",
     "knex": "<0.20.0",
     "pg": "latest",
+    "sha1": "^1.1.1",
     "slugify": "^1.4.5",
     "strapi": "3.1.4",
     "strapi-admin": "3.1.4",
