--- a/api/fbnews/models/Fbnews.settings.json
+++ b/api/fbnews/models/Fbnews.settings.json
@@ -7,7 +7,7 @@
   },
   "attributes": {
     "message": {
-      "type": "string"
+      "type": "text"
     },
     "permalink_url": {
       "type": "string"
