--- a/api/fbphoto/models/Fbphoto.settings.json
+++ b/api/fbphoto/models/Fbphoto.settings.json
@@ -7,7 +7,7 @@
   },
   "attributes": {
     "message": {
-      "type": "string"
+      "type": "text"
     },
     "permalink_url": {
       "type": "string"
