Adds field to about us page

--- a/api/o-nas/models/o-nas.settings.json
+++ b/api/o-nas/models/o-nas.settings.json
@@ -26,6 +26,15 @@
       "type": "string",
       "required": true
     },
+    "obrazokPravaStrana": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": true
+    },
     "OnasText": {
       "type": "text",
       "required": true
