--- a/api/o-nas/models/o-nas.settings.json
+++ b/api/o-nas/models/o-nas.settings.json
@@ -16,7 +16,8 @@
       "unique": false
     },
     "Nadpis": {
-      "type": "string"
+      "type": "string",
+      "required": true
     },
     "text1": {
       "type": "text",
@@ -35,15 +36,12 @@
       "plugin": "upload",
       "required": true
     },
-    "OnasText": {
-      "type": "text",
-      "required": true
-    },
     "infosky": {
+      "required": true,
       "type": "component",
       "repeatable": true,
       "component": "komponent.infoska",
-      "max": 5,
+      "max": 6,
       "min": 4
     }
   }
