--- a/api/o-nas/models/o-nas.settings.json
+++ b/api/o-nas/models/o-nas.settings.json
@@ -43,6 +43,12 @@
       "component": "komponent.infoska",
       "max": 6,
       "min": 4
+    },
+    "celorocnaPriprava": {
+      "required": true,
+      "type": "component",
+      "repeatable": false,
+      "component": "komponent.celorocnaPriprava"
     }
   }
 }
