Now stores latest photos_of_the_week.
Changes cron to run less regularly, but
now stores/rewrites db eve though the
newest post is the same.

--- a/api/fbnews/models/Fbnews.settings.json
+++ b/api/fbnews/models/Fbnews.settings.json
@@ -9,6 +9,9 @@
     "message": {
       "type": "text"
     },
+    "status_type":{
+      "type": "text"
+    },
     "permalink_url": {
       "type": "text"
     },
